--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
@@ -38,6 +41,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-dts": "^3.7.3",
+    "vitepress": "^1.0.0-rc.45",
     "vue-tsc": "^1.8.27"
   }
 }
