--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "vite ./documentation"
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
@@ -41,7 +39,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-dts": "^3.7.3",
-    "vitepress": "^1.0.0-rc.45",
     "vue-tsc": "^1.8.27"
   }
 }
